@@ -40,6 +40,7 @@ Verilator 5.009 devel
 * Fix characters from DEFENV literals for conda (#4035) (#4044). [Tim Snyder]
 * Fix interface generate begin (#4065). [Srinivasan Venkataramanan]
 * Fix false error on new const assignment (#4098). [Tudor Timi]
+* Fix unpacked structs under classes (#4102). [Tudor Timi]
 * Fix false ENUMVALUE on expressions and arrays.
 * Fix unnecessary verilated_std.sv waivers in --waiver-output.
 
